@@ -27,6 +27,7 @@ import javax.lang.model.element.TypeElement;
 import javax.lang.model.element.TypeParameterElement;
 import javax.lang.model.element.VariableElement;
 import javax.lang.model.type.ArrayType;
+import javax.lang.model.type.DeclaredType;
 import javax.lang.model.type.TypeKind;
 import javax.lang.model.type.TypeMirror;
 import javax.lang.model.util.Elements;
@@ -118,6 +119,9 @@ public final class Transpiler extends AbstractProcessor {
 
 	/** a map containing the package name to a map with the transpiler units of this package associated with the class name */
 	private final HashMap<String, HashMap<String, TranspilerUnit>> mapUnitsByPackage = new HashMap<>();
+
+	/** a map containing the qualified class name without type parameters to the corresponding class tree if a transpiler unit exists for this class */
+	private final HashMap<String, ClassTree> mapClassTreeByQualifiedName = new HashMap<>();
 
 
 	/// Transpiler Languages
@@ -483,6 +487,36 @@ public final class Transpiler extends AbstractProcessor {
 
 
 	/**
+	 * Returns whether a transpiler unit exists for the class represented by
+	 * the specified package and class name.
+	 *
+	 * @param packageName   the package name
+	 * @param className     the class  name
+	 *
+	 * @return true if the class exists and false otherwise
+	 */
+	public TranspilerUnit getTranspilerUnit(final String packageName, final String className) {
+		final HashMap<String, TranspilerUnit> mapUnitsByClass = mapUnitsByPackage.get(packageName);
+		if (mapUnitsByClass == null)
+			return null;
+		return mapUnitsByClass.get(className);
+	}
+
+
+	/**
+	 * Gibt den zugehörigen ClassTree für den übergebenen Klassennamen zurück,
+	 * sofern diese Klasse auch von Transpiler transpiliert wird.
+	 *
+	 * @param qualifiedName   der voll qualifizirte Name der Klasse
+	 *
+	 * @return das ClassTree-Objekt oder null
+	 */
+	public ClassTree getClassTree(final String qualifiedName) {
+		return mapClassTreeByQualifiedName.get(qualifiedName);
+	}
+
+
+	/**
 	 * Returns the full class name of the specified class tree, i.e. with
 	 * the package and in case of a nested class with its parent class(es).
 	 *
@@ -502,6 +536,37 @@ public final class Transpiler extends AbstractProcessor {
 	}
 
 
+
+	/**
+	 * Returns the list of attributes of the TypeElement, e.g. a class.
+	 *
+	 * @param typeElement   the type element
+	 *
+	 * @return the list of attributes of the type element
+	 */
+	public List<VariableElement> getAttributes(final TypeElement typeElement) {
+		final List<VariableElement> result = new ArrayList<>();
+		for (final Element e : typeElement.getEnclosedElements()) {
+			if (e instanceof final VariableElement ve) {
+				result.add(ve);
+			}
+		}
+		return result;
+	}
+
+
+	/**
+	 * Returns the list of attributes of the class tree node as VariableElement
+	 *
+	 * @param node   the class tree node
+	 *
+	 * @return the list of attributes of the class tree node as VariableElement
+	 */
+	public List<VariableElement> getAttributesFromClassTree(final ClassTree node) {
+		return getAttributes((TypeElement) this.getElement(node));
+	}
+
+
 	/**
 	 * Returns the list of attributes of the class tree node
 	 *
@@ -509,11 +574,39 @@ public final class Transpiler extends AbstractProcessor {
 	 *
 	 * @return the list of attributes of the class tree node
 	 */
-	public static List<VariableTree> getAttributes(final ClassTree node) {
-		return node.getMembers().stream()
-				.filter(member -> member.getKind() == Tree.Kind.VARIABLE)
-				.map(attr -> (VariableTree) attr)
-				.collect(Collectors.toList());
+	public List<VariableTree> getAttributes(final ClassTree node) {
+		return node.getMembers().stream().filter(member -> member.getKind() == Tree.Kind.VARIABLE)
+				.map(VariableTree.class::cast).toList();
+	}
+
+
+	/**
+	 * Returns the list of attributes of the class tree node
+	 *
+	 * @param node   the class tree node
+	 *
+	 * @return the list of attributes of the class tree node
+	 */
+	public List<VariableTree> getAttributesWithSuperclassAttributes(final ClassTree node) {
+		final List<VariableTree> result = new ArrayList<>();
+		if (this.getElement(node) instanceof final TypeElement te) {
+			var tmp = te;
+			while (tmp != null) {
+				if ((tmp.getSuperclass() instanceof final DeclaredType dt) && (dt.asElement() instanceof final TypeElement type)) {
+					tmp = type;
+					final String name = "" + tmp.getQualifiedName();
+					if ("java.lang.Object".equals(name))
+						break;
+					final ClassTree ct = this.getClassTree(name);
+					if (ct != null)
+						result.addAll(getAttributes(ct));
+				} else {
+					tmp = null;
+				}
+			}
+		}
+		result.addAll(getAttributes(node));
+		return result;
 	}
 
 
@@ -528,7 +621,7 @@ public final class Transpiler extends AbstractProcessor {
 	public static VariableTree getAttribute(final ClassTree node, final String name) {
 		return node.getMembers().stream()
 				.filter(member -> member.getKind() == Tree.Kind.VARIABLE)
-				.map(attr -> (VariableTree) attr)
+				.map(VariableTree.class::cast)
 				.filter(v -> v.getName().toString().equals(name))
 				.findFirst().orElse(null);
 	}
@@ -544,8 +637,7 @@ public final class Transpiler extends AbstractProcessor {
 	public static List<MethodTree> getConstructors(final ClassTree node) {
 		return node.getMembers().stream()
 				.filter(member -> (member.getKind() == Tree.Kind.METHOD) && ("<init>".equals("" + ((MethodTree) member).getName())))
-				.map(attr -> (MethodTree) attr)
-				.collect(Collectors.toList());
+				.map(MethodTree.class::cast).toList();
 	}
 
 
@@ -560,8 +652,7 @@ public final class Transpiler extends AbstractProcessor {
 	public static List<MethodTree> getMethods(final ClassTree node) {
 		return node.getMembers().stream()
 				.filter(member -> (member.getKind() == Tree.Kind.METHOD) && (!"<init>".equals("" + ((MethodTree) member).getName())))
-				.map(attr -> (MethodTree) attr)
-				.collect(Collectors.toList());
+				.map(MethodTree.class::cast).toList();
 	}
 
 
@@ -576,8 +667,7 @@ public final class Transpiler extends AbstractProcessor {
 	public static List<MethodTree> getAllMethods(final ClassTree node) {
 		return node.getMembers().stream()
 				.filter(member -> member.getKind() == Tree.Kind.METHOD)
-				.map(attr -> (MethodTree) attr)
-				.collect(Collectors.toList());
+				.map(MethodTree.class::cast).toList();
 	}
 
 
@@ -592,9 +682,8 @@ public final class Transpiler extends AbstractProcessor {
 	public static List<MethodTree> getMethods(final ClassTree node, final String name) {
 		return node.getMembers().stream()
 				.filter(member -> member.getKind() == Tree.Kind.METHOD)
-				.map(attr -> (MethodTree) attr)
-				.filter(m -> m.getName().toString().equals(name))
-				.collect(Collectors.toList());
+				.map(MethodTree.class::cast)
+				.filter(m -> m.getName().toString().equals(name)).toList();
 	}
 
 
@@ -643,7 +732,7 @@ public final class Transpiler extends AbstractProcessor {
 				}
 				if ((scopesLocalMethods != null) && (scopesLocalMethods.contains(ct))) {
 					final List<MethodTree> methods = getMethods(ct, node.getName().toString());
-					return (methods.size() > 0) && (methods.get(0).getModifiers().getFlags().contains(Modifier.STATIC));
+					return (!methods.isEmpty()) && (methods.get(0).getModifiers().getFlags().contains(Modifier.STATIC));
 				}
 			}
 		}
@@ -684,8 +773,8 @@ public final class Transpiler extends AbstractProcessor {
 		final TreePath path = getTreePath(node);
 		for (TreePath current = path; current.getParentPath() != null; current = current.getParentPath()) {
 			final Tree currentNode = current.getLeaf();
-			if (currentNode instanceof ClassTree)
-				return (ClassTree) currentNode;
+			if (currentNode instanceof final ClassTree ct)
+				return ct;
 		}
 		return null;
 	}
@@ -854,7 +943,7 @@ public final class Transpiler extends AbstractProcessor {
 	 *
 	 * @return the list of all annotations of the specified type
 	 */
-	public ArrayList<AnnotationTree> getAnnotationList(final String annotationType, final Tree tree) {
+	public List<AnnotationTree> getAnnotationList(final String annotationType, final Tree tree) {
 		final ArrayList<AnnotationTree> result = new ArrayList<>();
 		ModifiersTree mods = null;
 		if (tree instanceof final ClassTree classTree) {
@@ -1252,12 +1341,9 @@ public final class Transpiler extends AbstractProcessor {
 	 */
 	ExpressionType getAttributeType(final String className, final String memberName) {
 		final TypeElement classElement = getTypeElement(className);
-		for (final Element e : classElement.getEnclosedElements()) {
-			if (e instanceof final VariableElement ve) {
-				if (memberName.equals(ve.getSimpleName().toString()))
-					return ExpressionType.getExpressionType(this, ve.asType());
-			}
-		}
+		for (final Element e : classElement.getEnclosedElements())
+			if (e instanceof final VariableElement ve &&  (memberName.equals(ve.getSimpleName().toString())))
+				return ExpressionType.getExpressionType(this, ve.asType());
 		return null;
 	}
 
@@ -1272,12 +1358,9 @@ public final class Transpiler extends AbstractProcessor {
 	 */
 	ExpressionType getNestedType(final String className, final String memberName) {
 		final TypeElement classElement = getTypeElement(className);
-		for (final Element e : classElement.getEnclosedElements()) {
-			if (e instanceof final TypeElement ve) {
-				if (memberName.equals(ve.getSimpleName().toString()))
-					return ExpressionType.getExpressionType(this, ve.asType());
-			}
-		}
+		for (final Element e : classElement.getEnclosedElements())
+			if (e instanceof final TypeElement ve &&  (memberName.equals(ve.getSimpleName().toString())))
+				return ExpressionType.getExpressionType(this, ve.asType());
 		return null;
 	}
 
@@ -1304,7 +1387,7 @@ public final class Transpiler extends AbstractProcessor {
 		// check all interfaces of the class
 		final LinkedCollection<TypeMirror> interfaces = new LinkedCollection<>();
 		interfaces.addAll(te.getInterfaces());
-		while (interfaces.size() > 0) {
+		while (!interfaces.isEmpty()) {
 			final TypeMirror interfaceType = interfaces.removeFirst();
 			final Element interfaceElement = typeUtils.asElement(interfaceType);
 			if (interfaceElement instanceof final TypeElement ite) {
@@ -1330,14 +1413,13 @@ public final class Transpiler extends AbstractProcessor {
 					return i;
 				for (final TypeMirror interfaceType : ste.getInterfaces()) {
 					final Element interfaceElement = typeUtils.asElement(interfaceType);
-					if (interfaceElement instanceof final TypeElement ite) {
-						if (ite.toString().equals(superTypeName))
-							return i + 1;
-					} else continue;
+					if ((interfaceElement instanceof final TypeElement ite) &&  (ite.toString().equals(superTypeName)))
+						return i + 1;
 				}
 				superClass = ste.getSuperclass();
 				i += 2;
-			} else break;
+			} else
+				break;
 		}
 		if ("java.lang.Object".equals(superTypeName))
 			return i;
@@ -1548,7 +1630,9 @@ public final class Transpiler extends AbstractProcessor {
 			for (final Element element : roundEnv.getRootElements()) {
 				System.out.println("  -> Preparing: " + element.toString());
 				final TreePath path = trees.getPath(element);
-				final TranspilerUnit tu = new TranspilerUnit(this, path.getCompilationUnit(), (ClassTree) path.getLeaf(), (TypeElement) element);
+				final ClassTree classTree = (ClassTree) path.getLeaf();
+				final TypeElement typeElement = (TypeElement) element;
+				final TranspilerUnit tu = new TranspilerUnit(this, path.getCompilationUnit(), classTree, typeElement);
 				mapUnits.put(path.getCompilationUnit(), tu);
 				final String packageName = tu.getPackageName();
 				HashMap<String, TranspilerUnit> listUnits = mapUnitsByPackage.get(packageName);
@@ -1557,6 +1641,7 @@ public final class Transpiler extends AbstractProcessor {
 					mapUnitsByPackage.put(packageName, listUnits);
 				}
 				listUnits.put(tu.getClassName(), tu);
+				mapClassTreeByQualifiedName.put("" + typeElement.getQualifiedName(), classTree);
 			}
 
 			// scan the java compiler Tree-API and register all tree nodes with their path, identifier, variable and method names
